Updated Output to Match HD more

--- a/map.html
+++ b/map.html
@@ -92,9 +92,6 @@
                     <div class="col-lg-5">
                         <select class="form-control" id="output-type">
                             <option>Array</option>
-                            <option>List</option>
-                            <option>Arrays.asList</option>
-                            <option>Raw</option>
                         </select>
                     </div>
                 </div>
@@ -102,13 +99,7 @@
                     <label class="control-label col-lg-6" for="bot-api">Bot type</label>
                     <div class="col-lg-5">
                         <select class="form-control" id="bot-api">
-                            <option>OSBot</option>
-                            <option>TRiBot</option>
-                            <option>DreamBot</option>
-                            <option>RSPeer</option>
-                            <option>QuantumBot</option>
-                            <option>RuneMate</option>
-                            <option>RuneLite</option>
+                            <option>HD</option>
                         </select>
                     </div>
                 </div>
